feat: basic app bar and side bar
